bordes de form quitados

--- a/templates/compras.html
+++ b/templates/compras.html
@@ -123,7 +123,7 @@
                 </button>
               </div>
 
-              <form id="crearProductoForm" class="text-center border border-light" method="post" role="form">
+              <form id="crearProductoForm" class="text-center" method="post" role="form">
 
               <div class="modal-body mx-3">
 
