--- a/templates/inventario.html
+++ b/templates/inventario.html
@@ -123,7 +123,7 @@
                 </button>
               </div>
 
-              <form id="crearProductoForm" class="text-center border border-light" role="form">
+              <form id="crearProductoForm" class="text-center" role="form">
 
               <div class="modal-body mx-3">
 
@@ -170,7 +170,7 @@
                 </button>
               </div>
 
-              <form id="actualizarProductoForm" class="text-center border border-light" role="form">
+              <form id="actualizarProductoForm" class="text-center" role="form">
 
               <div class="modal-body mx-3">
 
