--- a/templates/inventario.html
+++ b/templates/inventario.html
@@ -7,45 +7,12 @@
 	<link rel="stylesheet" href="{{ url_for('static', filename='css/addons/datatables-select.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/all.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
   <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/addons/datatables.min.js') }}"></script>
   <script type="text/javascript" src="{{ url_for('static', filename='js/addons/datatables-select.min.js') }}"></script>
 	<script src="{{ url_for('static', filename='js/index.js') }}"></script>
-
-
-	<style type="text/css">
-
-    #div_carga{
-      display:none;
-    }
-
-    td {
-      width: 20%;
-      color: white;
-    }
-
-    th {
-      background-color: #b89df1;
-    }
-
-    div#dt-select_info {
-      color: white;
-    }
-
-    div#dt-select_filter {
-      color: white;
-    }
-
-    input {
-      color: white !important;
-    }
-
-    .form-control.form-control-sm {
-        color: black !important;
-    }
-
-	</style>
 
 </head>
 <body class="elegant-color-dark">
