--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -12,11 +12,11 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
     
 </head>
-<body>
+<body class="elegant-color-dark">
 
 	<div class="container">
 
-        <nav class="navbar navbar-expand-lg navbar-light bg-light mt-2">
+        <nav class="navbar navbar-expand-lg navbar-dark mt-2">
 
             <a class="navbar-brand" href="/inicio.html"><u>SGE</u></a>
 
@@ -30,7 +30,7 @@
 
                 <li class="nav-item">
 
-                  <a id="bInventario" class="nav-link" href="/inventario.html">Inventario</a>
+                  <a class="nav-link" href="/inventario.html">Inventario</a>
 
                 </li>
 
@@ -42,7 +42,7 @@
 
                 <li class="nav-item">
 
-                  <a class="nav-link" href="/compras.html">Compras</a>
+                  <a class="nav-link active" href="/compras.html">Compras</a>
 
                 </li>
 
