--- a/templates/compras.html
+++ b/templates/compras.html
@@ -45,7 +45,19 @@
 
                 <li class="nav-item">
 
-                  <a class="nav-link active" href="/compras.html"><u>Compras</u></a>
+                  <a class="nav-link active" href="/compras.html" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><u>Compras</u></a>
+
+                  <div class="dropdown-menu mega-menu v-1 z-depth-1 white py-5 px-3" aria-labelledby="navbarDropdownMenuLink1">
+                    <div class="row">
+                      <div class="col-md-5 col-xl-3 sub-menu mb-xl-0 mb-5">
+                        <ul class="list-unstyled">
+                          <li class="sub-title text-uppercase">
+                            <a class="menu-item pl-1 mt-2" href="#!">Laptops</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
 
                 </li>
 
