--- a/templates/compras.html
+++ b/templates/compras.html
@@ -43,16 +43,16 @@
 
                 </li>
 
-                <li class="dropdown-submenu">
+                <li class="nav-item">
 
-                  <a class="nav-link active" href="/compras.html"><u>Compras</u></a>
-
-                  <ul class="dropdown-menu">
-
-                    <li><a class="nav-link" href="#">Hola</a></li>
-                    <li><a class="nav-link" href="#">Adios</a></li>
-
-                  </ul>
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                      <a class="dropdown-item active" href="/compras.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                  </div>
 
                 </li>
 
