--- a/templates/compras.html
+++ b/templates/compras.html
@@ -46,7 +46,7 @@
                 <li class="nav-item">
 
                   <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                       <a class="dropdown-item active" href="/compras.html">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
