--- a/static/css/index.css
+++ b/static/css/index.css
@@ -36,6 +36,10 @@ input {
   color: white !important;
 }
 
-.dropdown-menu.show.bg-black {
+.dropdown-menu {
   background-color: black;
+}
+
+.dropdown-item:focus, .dropdown-item:hover {
+    background-color: red !important;
 }
