--- a/templates/compras.html
+++ b/templates/compras.html
@@ -33,24 +33,35 @@
 
                 <li class="nav-item">
 
-                  <a class="nav-link" href="/inventario.html">Inventario</a>
-
-                </li>
-
-                <li class="nav-item">
-
-                  <a class="nav-link" href="#">Ventas</a>
+                  <div class="dropdown">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonInventario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventario</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonInventario">
+                      <a class="dropdown-item active" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </div>
+                  </div>
 
                 </li>
 
                 <li class="nav-item">
 
                   <div class="dropdown">
-                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
-                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
+                      <a class="dropdown-item active" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </div>
+                  </div>
+
+                </li>
+
+                <li class="nav-item">
+
+                  <div class="dropdown">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
                       <a class="dropdown-item active" href="/compras.html">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
-                      <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                   </div>
 
