--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -18,7 +18,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-dark mt-2">
 
-            <a class="navbar-brand" href="/inicio.html"><u>SGE</u></a>
+            <a class="navbar-brand" href="/inicio.html">SGE</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"  aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,19 +30,37 @@
 
                 <li class="nav-item">
 
-                  <a class="nav-link" href="/inventario.html">Inventario</a>
+                  <div class="dropdown">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonInventario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventario</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonInventario">
+                      <a class="dropdown-item active" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </div>
+                  </div>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <a class="nav-link" href="#">Ventas</a>
+                  <div class="dropdown">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
+                      <a class="dropdown-item active" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </div>
+                  </div>
 
                 </li>
 
                 <li class="nav-item">
 
-                  <a class="nav-link active" href="/compras.html">Compras</a>
+                  <div class="dropdown">
+                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
+                      <a class="dropdown-item active" href="/compras.html">Crear</a>
+                      <a class="dropdown-item" href="#">Another action</a>
+                    </div>
+                  </div>
 
                 </li>
 
@@ -56,7 +74,7 @@
 
             </div>
 
-        </nav>       
+        </nav>      
       
      </div>
 
