--- a/templates/inventario.html
+++ b/templates/inventario.html
@@ -34,7 +34,7 @@
                 <li class="nav-item">
 
                   <div class="dropdown">
-                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonInventario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventario</button>
+                    <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonInventario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventario</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonInventario">
                       <a class="dropdown-item active" href="/inventario.html">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
@@ -46,9 +46,9 @@
                 <li class="nav-item">
 
                   <div class="dropdown">
-                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
+                    <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
-                      <a class="dropdown-item active" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="/inventario.html">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
                     </div>
                   </div>
@@ -58,9 +58,9 @@
                 <li class="nav-item">
 
                   <div class="dropdown">
-                    <button class="btn btn-outline-info dropdown-toggle" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
+                    <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
-                      <a class="dropdown-item active" href="/compras.html">Crear</a>
+                      <a class="dropdown-item" href="/compras.html">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
                     </div>
                   </div>
