--- a/static/css/index.css
+++ b/static/css/index.css
@@ -49,3 +49,17 @@ input {
   border: 1px solid #fdfdfd !important;
   color: white !important;
 }
+
+.dropdown-item.active, .dropdown-item:active {
+    background-color: black !important;
+    border: 1px solid white !important;
+}
+
+outline-info.dropdown-toggle {
+ border-color: white !important;
+}
+
+.navbar-brand {
+  border: 1px solid white;
+  padding: 10px;
+}
