--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -45,7 +45,7 @@
                   <div class="dropdown">
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
-                      <a class="dropdown-item" href="/inventario.html">Crear</a>
+                      <a class="dropdown-item" href="#">Crear</a>
                       <a class="dropdown-item" href="#">Another action</a>
                     </div>
                   </div>
