--- a/static/css/index.css
+++ b/static/css/index.css
@@ -68,3 +68,7 @@ outline-info.dropdown-toggle {
   border-color: white !important;
   color: white !important;
 }
+
+.btn-outline-info:not([disabled]):not(.disabled).active, .btn-outline-info:not([disabled]):not(.disabled):active, .show > .btn-outline-info.dropdown-toggle {
+  border-color: white !important;
+}
