--- a/templates/index.html
+++ b/templates/index.html
@@ -12,21 +12,26 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
 
     <style type="text/css">
-        
-        .container {
-            width: 50%
+
+        .row {
+            margin-top: 8%;
+        }
+
+        .loginf {
+            padding-left: 28%;
+            padding-right: 28%;
         }
 
     </style>
     
 </head>
-<body>
+<body class="elegant-color-dark">
 
 	<div class="container">
 
         <div class="row">
 
-            <div class="col-12">
+            <div class="col-12 loginf">
                 
                 <form id="login" class="text-center border border-light p-5 mt-5" method="post" role="form">
             
