--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
 
     <style type="text/css">
 
+        body {
+            color: white;
+        }
+
         .row {
             margin-top: 8%;
         }
@@ -45,17 +49,13 @@
             
                 </form>
 
-            </div>
-            
-        </div>
-
-        <div class="row">
-            
-            <div id="lCorrecto" class="col-12 alert alert-danger text-center d-none" role="alert">
+                <div id="lCorrecto" class="col-12 alert alert-danger text-center d-none" role="alert">
                     Usuario o contraseña incorrectos.
-            </div>
+                </div>
 
-        </div>     
+            </div>
+            
+        </div>  
       
      </div>
 
