--- a/templates/compras.html
+++ b/templates/compras.html
@@ -116,7 +116,19 @@
                   <input type="text" id="cpNombre" name="nombreP" class="form-control validate" placeholder="Nombre">
                 </div>
 
+                <div class="md-form mb-5">
+                  
+                  <select class="browser-default custom-select">
+                    <option selected>Open this select menu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
+
+                </div>
+
               </div>
+
               <div class="modal-footer d-flex justify-content-center">
                 <button id="crearProducto" class="btn btn btn-outline-primary my-2 my-sm-0">p</button>
               </div>
