--- a/templates/compras.html
+++ b/templates/compras.html
@@ -19,6 +19,7 @@
     .pSelect {
       background-color: #1c2331;
       color: white;
+      margin-left: 25px;
     }
 
   </style>
@@ -125,11 +126,11 @@
                   <input type="text" id="cpNombre" name="nombreP" class="form-control validate" placeholder="Nombre">
                 </div>
 
-                <div class="md-form mb-5">
+                <div class="md-form mb-5 row">
 
-                  <p class="col-2">Producto</p>
+                  <p class="col-2 pt-2">Producto</p>
                   
-                  <select class="browser-default custom-select col-8 pSelect">
+                  <select class="browser-default custom-select col-9 pSelect">
                     <option value="1" selected>One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
