--- a/templates/compras.html
+++ b/templates/compras.html
@@ -122,13 +122,9 @@
 
               <div class="modal-body mx-3">
 
-                <div class="md-form mb-5">
-                  <input type="text" id="cpNombre" name="nombreP" class="form-control validate" placeholder="Nombre">
-                </div>
-
                 <div class="md-form mb-5 row">
 
-                  <p class="col-2 pt-2">Producto</p>
+                  <p class="col-2 pt-2">Producto:</p>
                   
                   <select class="browser-default custom-select col-9 pSelect">
                     <option value="1" selected>One</option>
@@ -137,6 +133,31 @@
                     <option value="4">Four</option>
                   </select>
 
+                </div>
+
+                <div class="md-form mb-5 row">
+
+                  <p class="col-2 pt-2">Proveedor:</p>
+                  
+                  <select class="browser-default custom-select col-9 pSelect">
+                    <option value="1" selected>One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                    <option value="4">Four</option>
+                  </select>
+
+                </div>
+
+                <div class="md-form mb-5">
+                  <input type="number" name="cantidad" class="form-control validate" placeholder="Cantidad">
+                </div>
+
+                <div class="md-form mb-5">
+                  <input type="number" step="0.01" name="precio" class="form-control validate" placeholder="Precio">
+                </div>
+
+                <div class="md-form mb-5">
+                  <input type="number" step="0.01" name="total" class="form-control validate" placeholder="Total">
                 </div>
 
               </div>
