--- a/templates/compras.html
+++ b/templates/compras.html
@@ -112,7 +112,7 @@
           <div class="modal-dialog" role="document">
             <div class="modal-content unique-color-dark text-white">
               <div class="modal-header text-center">
-                <h4 class="modal-title w-100 font-weight-bold">p</h4>
+                <h4 class="modal-title w-100 font-weight-bold">Crear Compra</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -163,7 +163,7 @@
               </div>
 
               <div class="modal-footer d-flex justify-content-center">
-                <button id="crearProducto" class="btn btn btn-outline-primary my-2 my-sm-0">p</button>
+                <button id="crearCompra" class="btn btn btn-outline-primary my-2 my-sm-0">Crear</button>
               </div>
 
             </form>
