--- a/templates/compras.html
+++ b/templates/compras.html
@@ -93,7 +93,7 @@
 
           <div class="text-center">
 
-  				  <button class="btn btn btn-outline-primary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#modalCrearProducto">p</button>
+  				  <button id="botonCrearCompra" class="btn btn btn-outline-primary my-2 my-sm-0" type="button" data-toggle="modal" data-target="#modalCrearCompra">Crear</button>
 
 			    </div>
 
@@ -107,7 +107,7 @@
 
   </div>
 
-        <div class="modal fade" id="modalCrearProducto" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+        <div class="modal fade" id="modalCrearCompra" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
         aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content unique-color-dark text-white">
