--- a/templates/compras.html
+++ b/templates/compras.html
@@ -126,11 +126,7 @@
 
                   <p class="col-2 pt-2">Producto:</p>
                   
-                  <select class="browser-default custom-select col-9 pSelect">
-                    <option value="1" selected>One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-                    <option value="4">Four</option>
+                  <select id="sProductos" class="browser-default custom-select col-9 pSelect">
                   </select>
 
                 </div>
