--- a/templates/compras.html
+++ b/templates/compras.html
@@ -145,7 +145,7 @@
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" step="0.01" name="precio" class="form-control validate" placeholder="Precio">
+                  <input type="number" id="precioCP" step="0.01" name="precio" class="form-control validate" placeholder="Precio">
                 </div>
 
                 <div class="md-form mb-5">
