--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,9 @@
         .loginf {
             padding-left: 28%;
             padding-right: 28%;
+        }
+
+        #login {
             border-radius: 15px 15px 15px 15px;
         }
 
