--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             padding-right: 28%;
         }
 
-        #login {
+        #login, button {
             border-radius: 15px 15px 15px 15px;
         }
 
