--- a/static/css/index.css
+++ b/static/css/index.css
@@ -74,5 +74,5 @@ outline-info.dropdown-toggle {
 }
 
 button {
-  border-radius: 15px 15px 15px 15px;
+  border-radius: 15px 15px 15px 15px !important;
 }
