--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
         }
 
         #login, button {
-            border-radius: 15px 15px 15px 15px;
+            border-radius: 15px 15px 15px 15px !important;
         }
 
     </style>
