--- a/templates/inventario.html
+++ b/templates/inventario.html
@@ -193,9 +193,19 @@
             </div>
           </div>
         </div>
-
-
      </div>
+
+     <!-- Footer -->
+      <footer class="page-footer font-small special-color-dark pt-4">
+      
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <a href="#"> Alexsandro.Ruiz</a>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
+      <!-- Footer -->
 
 </body>
 
