--- a/templates/compras.html
+++ b/templates/compras.html
@@ -141,15 +141,15 @@
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" name="cantidad" class="form-control validate" placeholder="Cantidad">
+                  <input type="number" id="cantidadCP" name="cantidad" class="form-control validate" placeholder="Cantidad">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" id="precioCP" step="0.01" name="precio" class="form-control validate" placeholder="Precio">
+                  <input type="number" id="precioCP" step="0.01" name="precio" class="form-control validate disabled" placeholder="Precio">
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" step="0.01" name="total" class="form-control validate" placeholder="Total">
+                  <input type="number" step="0.01" name="total" class="form-control validate disabled" placeholder="Total">
                 </div>
 
               </div>
