--- a/templates/compras.html
+++ b/templates/compras.html
@@ -149,7 +149,7 @@
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="number" step="0.01" name="total" class="form-control validate disabled" placeholder="Total">
+                  <input type="number" id="totalCP" step="0.01" name="total" class="form-control validate disabled" placeholder="Total">
                 </div>
 
               </div>
