--- a/templates/compras.html
+++ b/templates/compras.html
@@ -166,6 +166,18 @@
 
      </div>
 
+     <!-- Footer -->
+      <footer class="page-footer font-small special-color-dark pt-4">
+      
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <a href="#"> Alexsandro.Ruiz</a>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
+      <!-- Footer -->
+
 </body>
 
 <script src="{{ url_for('static', filename='js/compras.js') }}"></script>
