--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -78,5 +78,17 @@
       
      </div>
 
+     <!-- Footer -->
+      <footer class="page-footer font-small special-color-dark pt-4">
+      
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <a href="#"> Alexsandro.Ruiz</a>
+        </div>
+        <!-- Copyright -->
+      
+      </footer>
+      <!-- Footer -->
+
 </body>
 </html>
