--- a/templates/compras.html
+++ b/templates/compras.html
@@ -118,7 +118,7 @@
                 </button>
               </div>
 
-              <form id="crearProductoForm" class="text-center" method="post" role="form">
+              <form id="crearCompraForm" class="text-center" method="post" role="form">
 
               <div class="modal-body mx-3">
 
