--- a/templates/compras.html
+++ b/templates/compras.html
@@ -71,7 +71,8 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
                       <a class="dropdown-item active" href="/compras.html">Crear</a>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Proveedor</a>
+                      <a class="dropdown-item" href="/historicoCompras.html">Histórico</a>
                     </div>
                   </div>
 
