--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -93,7 +93,7 @@
       </footer>
       <!-- Footer -->
 
-      <script src="{{ url_for('static', filename='js/historicoCompras.js') }}"></script>
+      <script src="{{ url_for('static', filename='js/historicoCompra.js') }}"></script>
 
 </body>
 </html>
