--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>  
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
+
+    <script type="text/javascript" src="{{ url_for('static', filename='js/historicoCompra.js') }}"></script>
     
 </head>
 <body class="elegant-color-dark">
@@ -92,8 +94,6 @@
       
       </footer>
       <!-- Footer -->
-
-      <script src="{{ url_for('static', filename='js/historicoCompra.js') }}"></script>
 
 </body>
 </html>
