--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -12,6 +12,10 @@
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/historicoCompra.js') }}"></script>
+
+    <style type="text/css">
+      body {background-color: red;}
+    </style>
     
 </head>
 <body class="elegant-color-dark">
