--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -59,7 +59,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
                       <a class="dropdown-item" href="/compras.html">Crear</a>
                       <a class="dropdown-item" href="#">Proveedor</a>
-                      <a class="dropdown-item" href="/historicoCompras.html">Histórico</a>
+                      <a class="dropdown-item" href="/hCompras.html">Histórico</a>
                     </div>
                   </div>
 
