--- a/templates/hCompras.html
+++ b/templates/hCompras.html
@@ -93,7 +93,7 @@
       </footer>
       <!-- Footer -->
 
-      <script type="text/javascript" src="{{ url_for('static', filename='js/historicoCompra.js') }}"></script>
+      <script type="text/javascript" src="{{ url_for('static', filename='js/hCompra.js') }}"></script>
 
 </body>
 </html>
