--- a/templates/hCompras.html
+++ b/templates/hCompras.html
@@ -93,8 +93,10 @@
       </footer>
       <!-- Footer -->
 
+      <p>aaaaa</p>
+
 </body>
 
-<script type="text/javascript" src="{{ url_for('static', filename='js/hCompra.js') }}"></script>
+<script src="{{ url_for('static', filename='js/hCompra.js') }}"></script>
 
 </html>
