--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -1,8 +1,6 @@
 <html>
 <head>
 
-  <title>Inicio</title>
-
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/mdb.min.css') }}">
@@ -77,7 +75,9 @@
 
             </div>
 
-        </nav>      
+        </nav>
+
+           <canvas id="pieChart"></canvas>
       
      </div>
 
@@ -94,4 +94,7 @@
       <!-- Footer -->
 
 </body>
+
+<script src="{{ url_for('static', filename='js/historicoCompras.js') }}"></script>
+
 </html>
