--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.js') }}"></script>
-    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>  
+    <script type="text/javascript" src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/modules/chart.js') }}"></script>  
     <script type="text/javascript" src="{{ url_for('static', filename='js/index.js') }}"></script>
     
 </head>
