--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -78,7 +78,7 @@
 
         </nav>
 
-           <canvas id="pieChart"></canvas>
+           <canvas id="pieChart" class="mt-5 mb-5"></canvas>
       
      </div>
 
