--- a/templates/historicoCompras.html
+++ b/templates/historicoCompras.html
@@ -78,6 +78,8 @@
 
         </nav>
 
+          <button id="siguiente" class="btn btn btn-outline-primary my-2 my-sm-0" type="button">Siguiente</button>
+
            <canvas id="pieChart" class="mt-5 mb-5"></canvas>
       
      </div>
