--- a/templates/proveedor.html
+++ b/templates/proveedor.html
@@ -120,7 +120,7 @@
                 </button>
               </div>
 
-              <form id="crearCompraForm" class="text-center" method="post" role="form">
+              <form id="crearProveedorForm" class="text-center" method="post" role="form">
 
               <div class="modal-body mx-3">
 
@@ -133,7 +133,7 @@
                 </div>
 
                 <div class="md-form mb-5">
-                  <input type="text" id="telefonoProveedor" name="telefonoProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
+                  <input type="number" id="telefonoProveedor" name="telefonoProveedor" class="form-control validate" placeholder="Teléfono Proveedor">
                 </div>
 
               </div>
