--- a/templates/inventario.html
+++ b/templates/inventario.html
@@ -37,7 +37,6 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonInventario" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Inventario</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonInventario">
                       <a class="dropdown-item active" href="/inventario.html">Crear</a>
-                      <a class="dropdown-item" href="#">Another action</a>
                     </div>
                   </div>
 
@@ -49,7 +48,7 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonVentas" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Ventas</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonVentas">
                       <a class="dropdown-item" href="#">Crear</a>
-                      <a class="dropdown-item" href="#">Another action</a>
+                      <a class="dropdown-item" href="#">Clientes</a>
                     </div>
                   </div>
 
@@ -61,7 +60,7 @@
                     <button class="btn btn-outline-info dropdown-toggle menuB" type="button" id="dropdownMenuButtonCompras" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Compras</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButtonCompras">
                       <a class="dropdown-item" href="/compras.html">Crear</a>
-                      <a class="dropdown-item" href="#">Proveedor</a>
+                      <a class="dropdown-item" href="/proveedor.html">Proveedor</a>
                       <a class="dropdown-item" href="/historicoCompras.html">Histórico</a>
                     </div>
                   </div>
